--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-firebase-hooks": "^5.0.3",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "spinners-react": "^1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
