--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-icons": "^4.6.0",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "spinners-react": "^1.0.7"
