--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-tailwind/react": "^1.2.4",
     "email-validator": "^2.0.4",
     "firebase": "^9.13.0",
+    "paginact": "^1.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
